# LazySql

./: .gitignore  CHANGELOG.md  COMPARISON.md  Cargo.toml  NOTES.md  README.md  ROADMAP.md  ROADMAP.txt  TODOs.md  cliff.toml  release.toml
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: robots.txt
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: example.md
examples/: README.md  batch_operation.rs  fts5.rs  quick_start.rs  runtime.rs  transactions.rs  transactions_runtime.rs
examples/connection_via_db_file/: README.md  main.rs  test.db
examples/connection_via_sql_file/: README.md  main.rs  schema.sql
sqlitex/: Cargo.toml  Documentation.md  docs_io_readme.md
sqlitex/tests/: README.md  tx.rs
sqlitex_core/: Cargo.toml
sqlitex_core/src/errors/: mod.rs
sqlitex_core/src/internal_sqlite/: dynamic_rows.rs  sqlitex_connection.rs  sqlitex_statement.rs
sqlitex_core/src/traits/: from_sql.rs
sqlitex_core/src/utility/: utils.rs
sqlitex_macros/: Cargo.toml
sqlitex_macros/src/: lib.rs  migrations.rs  schema_source.rs
sqlitex_macros/src/codegen/: context.rs  create_table.rs  mod.rs  read.rs  runtime.rs  write.rs
sqlitex_type_inference/: Cargo.toml
sqlitex_type_inference/src/: binding_patterns.rs  lib.rs  select_patterns.rs  table.rs
sqlitex_type_inference/tests/: binding_test.rs  select_and_binding_test.rs
tests/src/: nested_tx.rs
type_inference/src/: lib.rs
