[package]
name = "sqlitex_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "core logic for sqlitex"
repository = "https://github.com/Nareshix/sqlitex"
documentation = "https://docs.rs/sqlitex/latest/sqlitex"


[dependencies]
libsqlite3-sys = {version = "0.35.0", features = ["bundled"]}
thiserror = "2.0.17"
sqlitex_type_inference.workspace = true